[gd_scene load_steps=21 format=3 uid="uid://c2mj47e1m11e5"]

[ext_resource type="Script" uid="uid://de2t2xdmh8mu1" path="res://gameplay.gd" id="1_2ihbs"]
[ext_resource type="Shader" uid="uid://c4igox6oplpws" path="res://scoreboard.gdshader" id="1_fbudy"]
[ext_resource type="Shader" uid="uid://kcuykpnoe8we" path="res://scoreboardDark.gdshader" id="2_0m7cd"]
[ext_resource type="Shader" uid="uid://dcj6aleh6eaxg" path="res://balatroShader.gdshader" id="2_1qy1k"]
[ext_resource type="FontFile" uid="uid://bogbaja756dmg" path="res://Minecraft.ttf" id="3_2ihbs"]
[ext_resource type="Texture2D" uid="uid://dkvgfrw4k8jd" path="res://assets_task_01jxdpnnn4efwrhap88z9tnvt2_1749585458_img_3.webp" id="4_1qy1k"]
[ext_resource type="PackedScene" uid="uid://cu0kmvxlsrkxt" path="res://card_1_control.tscn" id="8_2ihbs"]
[ext_resource type="Texture2D" uid="uid://cmpvplpr25fx" path="res://bottomCard.png" id="9_1qy1k"]
[ext_resource type="PackedScene" uid="uid://dwxfxf7xwv1a5" path="res://card_2_control.tscn" id="9_3n40r"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3n40r"]
shader = ExtResource("2_1qy1k")
shader_parameter/spin_rotation_speed = 2.0
shader_parameter/move_speed = 7.0
shader_parameter/offset = Vector2(0, 0)
shader_parameter/colour_1 = Color(0.871, 0.267, 0.231, 1)
shader_parameter/colour_2 = Color(0, 0.42, 0.706, 1)
shader_parameter/colour_3 = Color(0.086, 0.137, 0.145, 1)
shader_parameter/contrast = 3.5
shader_parameter/lighting = 0.4
shader_parameter/spin_amount = 0.25
shader_parameter/pixel_filter = 740.0
shader_parameter/is_rotating = false

[sub_resource type="AnimatedTexture" id="AnimatedTexture_45aep"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ir8iy"]
shader = ExtResource("1_fbudy")
shader_parameter/rows = 2000.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_hqns4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hqns4"]
shader = ExtResource("2_0m7cd")
shader_parameter/rows = 200.0
shader_parameter/color1 = Color(0.11, 0.11, 0.11, 1)
shader_parameter/color2 = Color(0.22, 0.22, 0.22, 1)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_x0ka3"]

[sub_resource type="Animation" id="Animation_45aep"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Card1Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(60, 196)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-361, 196)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Card1Control/CardBackImage:z_index")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Card1Control:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.29147]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.29147]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("%Card1Control:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_nwk8b"]
resource_name = "animate1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Card1Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.116667, 0.166667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(60, 196), Vector2(119, 196), Vector2(294.703, 196), Vector2(488, 196)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.116667, 0.166667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-360, 196), Vector2(-302, 196), Vector2(-126.297, 196), Vector2(67, 196)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Card1Control:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.116667, 0.166667, 0.216667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.29147, 0.656244, 0.656244, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.116667, 0.166667, 0.216667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.29147, 0.656244, 0.656244, 0.0]
}

[sub_resource type="Animation" id="Animation_3n40r"]
resource_name = "init"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Card1Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(60, 196)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-361, 196)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("%Card1Control:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_x2ust"]
resource_name = "loopcard1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Card1Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.116667, 0.166667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-360, 196), Vector2(-302, 196), Vector2(-126.297, 196), Vector2(67, 196)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.116667, 0.166667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(60, 196), Vector2(119, 196), Vector2(294.703, 196), Vector2(488, 196)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Card1Control:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.116667, 0.166667, 0.216667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.29147, 0.656244, 0.656244, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.116667, 0.166667, 0.216667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.29147, 0.656244, 0.656244, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Card1Control/CardBackImage:z_index")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7y1a3"]
_data = {
&"RESET": SubResource("Animation_45aep"),
&"animate1": SubResource("Animation_nwk8b"),
&"init": SubResource("Animation_3n40r"),
&"loopcard1": SubResource("Animation_x2ust")
}

[node name="Node2d - gameplay" type="Node2D"]
script = ExtResource("1_2ihbs")

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_3n40r")
offset_right = 431.0
offset_bottom = 648.0
texture = SubResource("AnimatedTexture_45aep")
stretch_mode = 6

[node name="TextureRect Scoreboard" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_ir8iy")
offset_right = 431.0
offset_bottom = 171.0
texture = SubResource("PlaceholderTexture2D_hqns4")

[node name="TextureRect3" type="TextureRect" parent="."]
modulate = Color(0.235294, 0.360784, 1, 1)
offset_left = 151.0
offset_top = 130.0
offset_right = 282.0
offset_bottom = 165.0
texture = ExtResource("9_1qy1k")
expand_mode = 1

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 431.0
offset_bottom = 175.0

[node name="TextureRect" type="TextureRect" parent="Control"]
material = SubResource("ShaderMaterial_hqns4")
layout_mode = 0
offset_left = 35.0
offset_top = 16.0
offset_right = 395.0
offset_bottom = 125.0
texture = SubResource("PlaceholderTexture2D_x0ka3")

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 95.0
offset_top = 21.0
offset_right = 318.0
offset_bottom = 55.0
theme_override_fonts/font = ExtResource("3_2ihbs")
theme_override_font_sizes/font_size = 33
text = "Score at least"

[node name="Label2" type="Label" parent="Control"]
layout_mode = 0
offset_left = 225.0
offset_top = 91.0
offset_right = 292.0
offset_bottom = 121.0
theme_override_colors/font_color = Color(1, 0.79928, 0.216403, 1)
theme_override_fonts/font = ExtResource("3_2ihbs")
theme_override_font_sizes/font_size = 28
text = "$$$$"

[node name="Label3" type="Label" parent="Control"]
layout_mode = 0
offset_left = 119.0
offset_top = 95.0
offset_right = 217.0
offset_bottom = 119.0
theme_override_fonts/font = ExtResource("3_2ihbs")
theme_override_font_sizes/font_size = 24
text = "Reward:"

[node name="Label4" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 177.0
offset_top = 60.0
offset_right = 258.0
offset_bottom = 94.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_2ihbs")
theme_override_font_sizes/font_size = 33
text = "1000"
horizontal_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="Control/Label4"]
layout_mode = 0
offset_left = -65.0
offset_top = -26.0
offset_right = 32.0
offset_bottom = 47.0
texture = ExtResource("4_1qy1k")
expand_mode = 1
stretch_mode = 5

[node name="Label5" type="Label" parent="Control"]
layout_mode = 0
offset_left = 10.0
offset_top = 136.0
offset_right = 84.0
offset_bottom = 164.0
theme_override_fonts/font = ExtResource("3_2ihbs")
theme_override_font_sizes/font_size = 28
text = "Ante:"

[node name="Label6" type="Label" parent="Control/Label5"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 74.0
offset_right = 111.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(0.923428, 0.503217, 0, 1)
theme_override_fonts/font = ExtResource("3_2ihbs")
theme_override_font_sizes/font_size = 33
text = "5"

[node name="Label6" type="Label" parent="Control"]
layout_mode = 0
offset_left = 142.0
offset_top = 623.0
offset_right = 237.0
offset_bottom = 651.0
theme_override_fonts/font = ExtResource("3_2ihbs")
theme_override_font_sizes/font_size = 28
text = "Round:"

[node name="RoundLabel" type="Label" parent="Control/Label6"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 110.0
offset_right = 134.0
offset_bottom = 34.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_2ihbs")
theme_override_font_sizes/font_size = 33
text = "5"

[node name="Card1Control" parent="." instance=ExtResource("8_2ihbs")]
unique_name_in_owner = true

[node name="Card2Control" parent="." instance=ExtResource("9_3n40r")]
unique_name_in_owner = true
rotation = 0.29147

[node name="CurrentScore" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 151.0
offset_top = 130.0
offset_right = 282.0
offset_bottom = 165.0
theme_override_fonts/font = ExtResource("3_2ihbs")
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1
vertical_alignment = 2

[node name="TransitionPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
root_node = NodePath("../Card2Control")
libraries = {
&"": SubResource("AnimationLibrary_7y1a3")
}
